# poker_image_analyzer

./: .gitignore  CLAUDE.md  HEADER.md  HandHistoryDeanonymizer.spec  LAST_STATE.md  README.md  TESTS.md  app.py  build.py  convert.py  e2e_test.py  installer.iss  main.py  pyproject.toml  settings.toml  test_random_sample.py
gui/: __init__.py  app.py  drop_zone.py  file_list.py  main_window.py  settings_dialog.py  version.py  workers.py
hand_history/: __init__.py  converter.py  parser.py  seat_mapping.py  seat_mapping.toml
image_analyzer/: __init__.py  analyzer.py  constants.py  corrections.toml
image_analyzer/engines/: __init__.py  easyocr_engine.py  protocol.py  tesseract_engine.py
image_analyzer/llm/: __init__.py  anthropic.py  protocol.py
image_analyzer/models/: OCRResult.py  PlayerRegion.py  ScreenshotFilename.py  __init__.py
image_analyzer/ocr_dump/: __init__.py  v1.py  v2.py
image_analyzer/upscalers/: __init__.py  clahe.py
settings/: __init__.py  config.py  engine_manager.py
settings/installers/: __init__.py  easyocr.py  protocol.py  tesseract.py
settings/models/: EngineName.py  __init__.py
tests/: test_engine_manager.py  test_gui.py  test_hand_history.py  test_image_analyzer.py  test_installers.py  test_settings.py  testscreenresults.toml
tests/fixtures/: expected_results.toml  sample_hands.txt
tests/fixtures/integration/: ocr_dump_v1.toml  ocr_dump_v2.toml  sample_hands.txt
