[project]
name = "oitnow2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "opencv-python>=4.13.0.90",
    "pillow>=11.3.0",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
easyocr = ["easyocr>=1.7"]
tesseract = ["pytesseract>=0.3"]
all = ["easyocr>=1.7", "pytesseract>=0.3"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "easyocr>=1.7",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
