[project]
name = "oitnow2"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.78.0",
    "opencv-python>=4.13.0.90",
    "pillow>=11.3.0",
    "pyside6>=6.6.0",
    "python-dotenv>=1.2.1",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
    "pytest-qt>=4.4.0",
]

[tool.setuptools.packages.find]
include = ["image_analyzer*", "settings*", "hand_history*", "gui*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
